--- a/Assignment_Alt.html
+++ b/Assignment_Alt.html
@@ -16,11 +16,11 @@
 	<main>
 	
 		<header>
-			<h1>Elephants</h1>
-			<p>Elephants are very unique creatures. Here you will learn some fascinating facts about those gentle giants.</p>
+			<h1><font color="2D87EE" face="Impact">Elephants</font></h1>
+			<p><font face="Impact" size ="4">Elephants are very unique creatures. Here you will learn some fascinating facts about those gentle giants.</font></p>
 		</header>
 
-		<h3>Physical attributes</h1>
+		<h2>Physical attributes</h2>
 		<p>Elephants have many distinguishing physical traits. They can be characterized by their trunks, tusks, and large stature.</p>
 		
 		<h4>Trunk</h3>
@@ -29,7 +29,7 @@
 		<br>Photo by <a href="https://unsplash.com/@iswanto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Iswanto Arif</a> on <a href="https://unsplash.com/s/photos/elephants?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 		
 		<h6>Uses of trunk</h6>
-		<p>Here is some information about how elephants use their trunks from Elephant Aid International:</p>
+		<p>Here is some information about how elephants use their trunks from <i>Elephant Aid International</i>:</p>
 		
 		<blockquote cite="https://elephantaidinternational.org/elephant-facts/?gclid=CjwKCAjw6raYBhB7EiwABge5KvMUsetWpqtyoriUIVnuXTpSiuCPj4wdoTJnk-VNAg7lcJ-ssmXlVRoCEAQQAvD_BwE">
 		Like the human tongue, the trunk is a muscular hydrostat—a muscle or muscle group that works independently, without bone support. Trunks have incredible strength, flexibility, 
