--- a/Assignment_Alt.html
+++ b/Assignment_Alt.html
@@ -38,9 +38,9 @@
 		</blockquote>
 
 		<h4>Tusks</h4>
-		<a href="Elephant_Tusks.html">Elephant Tusks</a>
+		<a href="Elephant_Tusks.html" target="new">Elephant Tusks</a>
 		
-		<h3>Elephants are so smart!</h3>
+		<h3><em>Elephants are so smart!</em></h3>
 		<iframe width="420" height="315"
 		src="https://www.youtube.com/embed/nq7vAGGSjVM">
 	</iframe>
