--- a/One-Page-Website/one_page_website.html
+++ b/One-Page-Website/one_page_website.html
@@ -59,10 +59,9 @@
 					<!--VIDEO-CONTAINER 1-->
 					<div>
 						<div>	
-							<video width="320" height="240" controls>
-							<source src="./images/video_1.mp4" type="video/mp4">
-							Looks like your browser does not support this video.
-							</video>
+							<iframe width="420" height="315"
+								src="https://youtube.com/embed/ex7RcoO3pEo">
+							</iframe>
 						</div>
 					</div>		
 					<!--END VIDEO-CONTAINER-->
