--- a/BasicHTML.html
+++ b/BasicHTML.html
@@ -11,5 +11,24 @@
 		</header>
 		<p>Introduction to basic HTML syntax.</p>
 		<p>Added another paragraph.</p>
+		
+		<div>
+			<table>
+			<colgroup>
+				<col span="2" style="background-color:gray">
+				<col style="background-color:blue">
+			</colgroup>
+			<tr>
+				<th>Period</th>
+				<th>Class</th>
+				<th>Teacher</th>
+			</tr>
+			<tr>
+				<td>First</td>
+				<td>Science</td>
+				<td>Bush</td>
+			</tr>
+			</colorgroup>
+			</table>
 	</body>
 </html>
