--- a/One-Page-Website/one_page_website.html
+++ b/One-Page-Website/one_page_website.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Island Vacations</title>
+		<link rel="stylesheet" href="./CSS/one_page_website.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Poppins|Abril+Fatface">
 	</head>
 	
 	<body>
