--- a/Basic_HTML_and_CSS/W3S_practice.html
+++ b/Basic_HTML_and_CSS/W3S_practice.html
@@ -43,6 +43,12 @@
             width: 100%;
             height: auto;
             }
+
+            @media screen and (max-width: 600px) {
+                p {
+                    color: blue;
+                }
+            }
         </style>
     </head>
     <body>
