--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -24,7 +24,7 @@
         <!--BACKGROUND VIDEO-->
         <div id="Home">
             <video autoplay muted loop id="Typing_Video">
-                <source src="Images/Video/background_video.mp4" type="video/mp4">
+                <source src="Images/Video/video_1.mp4" type="video/mp4">
                 <!--Display message if video fails to run-->
                 Your brower does not support HTML5 video.
             </video>
