--- a/Basic_HTML_and_CSS/VSCPractice.html
+++ b/Basic_HTML_and_CSS/VSCPractice.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h2>Practice</h2>
-        <p>Visual Studio Code is easier to use than Notepad++ because it uses Intellisense!</p>
+        <p>Visual Studio Code is easier to use than Notepad++ because it uses Intellisense!
+            I will continue to use Visual Studio Code!
+        </p>
     </body>
 </html>
