--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -6,6 +6,7 @@
         <title>Evelina Garcia Portfolio</title>
         <link rel="stylesheet" type="text/css" href="CSS/portfolio.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arapey|Nunito|Poppins">
+        <link rel="icon" type="image/x-icon" href="./Images/Icons/favicon.ico">
     </head>
 
     <!--BODY-->
