--- a/One-Page-Website/one_page_website.html
+++ b/One-Page-Website/one_page_website.html
@@ -89,10 +89,10 @@
 					
 					
 						<div class="column">
-						<img class="demo cursor" src="./Images/image_1.jpg" style="width:100%" onclick="currentSlide(1)" alt="White sand beaches">
+						<img class="demo cursor" src="./Images/image_1.jpg" style="width:100%" onclick="currentSlide(1)" alt="White Sand Beaches">
 						</div>
 						<div class="column">
-						<img class="demo cursor" src="./Images/image_2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Beautiful oceans">
+						<img class="demo cursor" src="./Images/image_2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Beautiful Oceans">
 						</div>
 						<div class="column">
 						<img class="demo cursor" src="./Images/image_3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Stunning Sunsets">
