Added vw unit to font size

--- a/One-Page-Website/one_page_website.html
+++ b/One-Page-Website/one_page_website.html
@@ -24,7 +24,7 @@
 		<!--HOME-->
 		<div id="home">
 			<div>
-					<h1>Beach Vacations</h1>
+					<h1 style="font-size: 4vw;">Beach Vacations</h1>
 					<p>Beautiful beaches and turquoise waters. Doesnt that sound amazing? Beach
 						vacations offer that and so much more. Jump in to see what breathtaking
 						beaches you can visit.
@@ -36,7 +36,7 @@
 		<!--GALLERY-->
 		<section>
 			<div id="gallery">
-				<h2>Gallery</h2>
+				<h2 style="font-size: 2vw;">Gallery</h2>
 				<p>Are you ready for your next vacation? Check out these beautiful locations.</p>
 				<div>
 				
