--- a/Website_Project/index.html
+++ b/Website_Project/index.html
@@ -9,7 +9,13 @@
 	</head>
 
 	<body>
-
+		<script>
+			document.body.classList.add('fade-out');
+		
+		window.addEventListener('DOMContentLoaded', () => {
+			document.body.classList.remove('fade-out');
+		});
+		</script>
 		<!--NAV-->
 		<div class="wrap">
 			<div class="menu-container">
