--- a/Website_Project/index.html
+++ b/Website_Project/index.html
@@ -44,7 +44,7 @@
 				<h1>Gallery</h1>
 				<div class="flex-container">
 
-					<!--PHOTO CONTAINER 1-->
+					<!--PHOTOS CONTAINER 1 -->
 					<div class="photo-container">
 						<div class="photo">
 							<img src="./Images/Thumb/thumbnail_1.jpg" alt="">
