--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -39,12 +39,12 @@
             <h1 class="white-text">Evelina Garcia's Portfolio</h1>
             <strong>
                <p class="center">
-                    <q> The computer programmer is a creator of universe for which he alone is the lawgiver.
+                    <!-- <q> The computer programmer is a creator of universe for which he alone is the lawgiver.
                         <br>No playwright, no stage director, no emperor, however powerful, has ever exercised such absolute authority to arrange a stage or
                         <br>field of battle and to command such unswervingly dutiful actors or troops.
                     </q>
                     <br>-Joseph Weizenbaum<br>
-                    <br>
+                    <br> -->
                     My name is Evelina Garcia. Welcome to my portfolio website. On it, I will tell you about my background and experience.
                     <br>
                     <br>Thanks for stopping by and enjoy!
@@ -67,10 +67,10 @@
                         <div class="text">I am a full-stack software developer,<br>trained in:<br>HTML, CSS, Javascript</div>
                     </div>
                     <!-- Slide 3 of 6 -->
-                    <div class="mySlides fade">
+                    <!-- <div class="mySlides fade">
                         <img class="Slideshow_Images" src="Images/Python.png" alt="Python logo">
                         <div class="text">the popular programming language Python,</div>
-                    </div>
+                    </div> -->
                     <!-- Slide 4 of 6 -->
                     <div class="mySlides fade">
                         <img class="Slideshow_Images" src="Images/C_Sharp_and_Dot_NET.png" alt="C# logo">
@@ -90,7 +90,7 @@
                     <a class="Previous" onclick="plusSlides(-1)">&#10094;</a>
                     <a class="Next" onclick="plusSlides(1)">&#10095;</a>
                 </div>
-                <br> <!-- Adds a space between teh slideshow images and the dots-->
+                <br> <!-- Adds a space between the slideshow images and the dots-->
 
                 <!-- Slideshow dots (these are another way for users to navigate through the slideshow)-->
                 <div style="text-align: center">
@@ -99,7 +99,7 @@
                     <span class="dot" onclick="currentSlide(3)"></span>
                     <span class="dot" onclick="currentSlide(4)"></span>
                     <span class="dot" onclick="currentSlide(5)"></span>
-                    <span class="dot" onclick="currentSlide(6)"></span>
+                    <!-- <span class="dot" onclick="currentSlide(6)"></span> -->
                 </div>
             </div>
         </div>
