Added API endpoint for form submission

--- a/Website_Project/index.html
+++ b/Website_Project/index.html
@@ -167,7 +167,7 @@
 			<button class="open-button" onclick="openForm()">Sign Me Up!</button>
 
 			<div class="form-popup" id="myForm">
-			<form action="/action_page.php" class="form-container">
+			<form action="https://formspree.io/f/xwkzvjlv" method="post" class="form-container">
 				<h1>Login</h1>
 
 				<label for="firstname"><b>First Name</b></label>
