--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -20,7 +20,7 @@
              <!-- New section added -->
             <a href="#Slideshow">Slideshow</a>
             <a href="#About">About</a>
-            <a href="#GitHub">GitHub</a>
+            <a href="#Links">Links</a>
             <!-- Onclick and ondblclick functions added to open and close the contact form-->
             <a onclick="openForm()" ondblclick="closeForm()" class="contact">Contact</a>
         </div>
@@ -123,14 +123,23 @@
         </div>
 
         <!--GITHUB SECTION-->
-        <div class="Row" id="GitHub">
+        <div class="Row" id="Links">
             <!--Left column-->
             <div class="Column_1">
-                <h1>GitHub</h1>
+                <h1>Links</h1>
                 <p>You can view my coding projects on my GitHub profile here:
                     <br>
                     <p class="center"><a href="https://github.com/egarcia8" target="blank">Evelina Garcia's GitHub</a></p>
                 </p>
+                <p>You can view my Linkedin account here:
+                    <br>
+                    <p class="center"><a href="www.linkedin.com/in/evelina-garcia-dev" target="blank">Evelina Garcia's Linkedin</a></p>
+                </p>
+                <p>You can view my resume here:
+                    <br>
+                    <p class="center"><a href="https://docs.google.com/document/d/1nmsZsmwEPNhYT4UpBwbXVju4WoKDVFlJfXfT_MotJU4/edit?usp=sharing" target="blank">Evelina Garcia's Resume</a></p>
+                </p>
+               
             </div>
             <!--Right column-->
             <div class="Column_2">
