--- a/One-Page-Website/one_page_website.html
+++ b/One-Page-Website/one_page_website.html
@@ -25,9 +25,9 @@
 		<div id="home">
 			<div>
 					<h1 style="font-size: 4vw;">Beach Vacations</h1>
-					<p>Beautiful beaches and turquoise waters. Doesnt that sound amazing? Beach
+					<p>Beautiful beaches and turquoise waters. Doesn't that sound amazing? Beach
 						vacations offer that and so much more. Jump in to see what breathtaking
-						beaches you can visit.
+						beaches you can visit!
 					</p>
 			</div>
 		</div>
@@ -111,9 +111,9 @@
 							<video width="560" height="420" controls muted autoplay loop>
 								<source src="./Images/Video/video.mp4" type="video/mp4">
 							</video>
-							<div class="video">Video by <a href=" https://www.pexels.com/video/drone-view-of-big-waves-rushing-to-the-shore-3571264">
+							<p>Video by <a href=" https://www.pexels.com/video/drone-view-of-big-waves-rushing-to-the-shore-3571264">
 								Enrique Hoyos</a>
-							</div>
+							</p>
 						</div>
 					</div>		
 					<!--END VIDEO-CONTAINER-->
